# matrix_reactive_wallpaper

./: Cargo.toml  flake.nix
src/: egl.rs  main.rs  shader.frag  stats.rs
